# loopforge

./: .gitignore  DESIGN.md  README.md  pyproject.toml
src/loopforge/: __init__.py  celery_app.py  db.py  engine.py  main.py  models.py  server.py  worker.py
src/loopforge/dashboard/: index.html
src/loopforge/llm/: client.py  types.py
src/loopforge/llm/providers/: _openai_compatible.py  claude.py  deepseek.py  openai.py
src/loopforge/strategy/: base.py  registry.py
src/loopforge/strategy/builtin/: fix.py  generate.py  optimize.py  refactor.py  review.py
tests/: test_db.py  test_engine.py  test_live_deepseek.py  test_live_fix_bug.py  test_live_multi_bug.py  test_models.py  test_registry.py
