[project]
name = "loopforge"
version = "0.1.0"
description = "AI-powered engineering loop engine — continuous iterative refinement as a service"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Yuhang Wu"}
]
keywords = ["ai", "agent", "loop", "engineering", "automation", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.40.0",
    "openai>=1.0",
    "celery>=5.0",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0",
    "jinja2>=3.1",
    "docker>=7.0",
    "rich>=13.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0",
    "ruff>=0.5.0",
    "mypy>=1.0",
]
postgres = ["psycopg2-binary>=2.9", "asyncpg>=0.30.0"]

[project.scripts]
loopforge = "loopforge.main:cli"

[project.entry-points."loopforge.strategies"]
optimize = "loopforge.strategy.builtin.optimize:OptimizeStrategy"
fix = "loopforge.strategy.builtin.fix:FixStrategy"
refactor = "loopforge.strategy.builtin.refactor:RefactorStrategy"
generate = "loopforge.strategy.builtin.generate:GenerateStrategy"
review = "loopforge.strategy.builtin.review:ReviewStrategy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
